fixed terminal size on mobile viewport

--- a/porfolio/src/css/index.css
+++ b/porfolio/src/css/index.css
@@ -211,7 +211,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
-  margin-top: 30px;
   width: 100%;
   height: 400px;
   max-height: 250px;
@@ -227,7 +226,6 @@
   .Render #Jumbotron {
     max-height: 250px;
     min-height: 250px;
-    max-height: 500px;
   }
 }
 .Render #Jumbotron #callToAction {
