--- a/porfolio/src/less/Render.less
+++ b/porfolio/src/less/Render.less
@@ -25,7 +25,6 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
-    margin-top: 30px;
     .w(100%);
     .h(400px);
     .min-h(250px);
@@ -34,7 +33,6 @@
     position: relative;
     @media @tablet {
         .min-h(250px);
-        .max-h(500px);
     }
     #callToAction{
         position: absolute;
